# pg_reflex

./: .claudeignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  discussion_todo.md  docs-requirements.txt  install.sh  mkdocs.yml  pg_reflex.control  test_subquery_visitor.sql
benchmarks/: README.md  bench_1_3_0_topk.sql  bench_1_3_0_topk_5m.sql  bench_avg.sql  bench_baseline.sql  bench_batch.sql  bench_cascade.sql  bench_comprehensive.sql  bench_count_distinct.sql  bench_cte.sql  bench_db_clone.sql  bench_diagnostic.sql  bench_diagnostic_breakdown.sql  bench_diagnostic_breakdown_v2.sql  bench_diagnostic_cliff.sql  bench_full_scale_1_3_0.sql  bench_highcard_multi_imv.sql  bench_isolated.sql  bench_join.sql  bench_join_strategy.sql  bench_matrix.sql  bench_mixed_operations.sql  bench_n1_topk_update.sql  bench_oltp_single_row.sql  bench_optimizations.sql  bench_optimizations_v2.sql  bench_planner_tuning.sql  bench_production.sql  bench_profile_current.sql  bench_profile_pipeline.sql  bench_profile_v2.sql  bench_sop_4gb.sql  bench_sop_4gb_large.sql  bench_sop_forecast.sql  bench_sop_reproduce.sql  bench_sum.sql  bench_truncate_vs_delete.sql  bench_vs_pgivm.sql  results_diagnostic_breakdown.txt  results_diagnostic_breakdown_v2.txt  (+10 more)
docs/: changelog.md  index.md
journal/: 2026-04-17_db_clone_rebuild.md  2026-04-17_fix_cycle.md  2026-04-21_db_clone_benchmark.md  2026-04-21_min_max_recompute_bug.md  2026-04-22_bug_report.md  2026-04-22_db_clone_benchmark_rerun.md  2026-04-22_optimization_ideas.md  (+9 more)
sql/: README.md  (+12 more)
(+88 files in other folders)
