[package]
name = "pg_reflex"
version = "1.1.3"
edition = "2021"
description = "Incremental materialized view maintenance for PostgreSQL"
license = "Apache-2.0"
repository = "https://github.com/diviyank/pg_reflex"
authors = ["Diviyan Kalainathan"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_reflex"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
pgrx = "=0.16.1"
sqlparser = { version = "0.60", features = ["visitor"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pgrx-tests = "=0.16.1"
proptest = "1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
